added title to main page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/index.css">
+<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Poiret+One|Satisfy&display=swap" rel="stylesheet">
 <title>World View</title>
 </head>
 
@@ -25,7 +26,10 @@
       </div>
     </div>
   </div>
-
+  <div id="mapHeader">
+    <h1>Roam</h1>
+    <h3>An exploration assistant for worldly travels.</h3>
+  </div>
   <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
     The world!!!!
     <!-- fallback image in CSS -->
@@ -41,7 +45,9 @@
         <p><a href="https://heathbanner.github.io/" target="_blank">Heath Banner</a></p>
         <p><a href="https://ruchita-g.github.io/Responsive-Portfolio" target="_blank">Ruchita Gandhe</a></p>
       </div>
-      <div class="col-2"><p>Copyright ©</p></div>
+      <div class="col-2">
+        <p>Copyright ©</p>
+      </div>
       <div class="col-4 columns pt-2">
         <p><a href="https://github.com/" target="_blank"></a>GitHub</p>
         <p><a href="https://inkscape.org/" target="_blank">Inkscape</a></p>
