--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,6 +25,15 @@ body, html {
     
 
 }
+#mapHeader{
+    position:absolute;
+    top:0;
+    width:100%;
+    text-align: center;
+    font-family: 'Fredericka the Great', cursive;
+    font-weight: 900;
+    margin-top: 4px;
+}
 .columns {
     line-height: 15%;
 }
