--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -15,6 +15,7 @@
 
 <body>
 <div class="cursor"></div>
+<div class="cursor-clone"></div>
 
     <h1 id="countryHeader">{{result.0.dataValues.continent}}</h1>
 
@@ -69,15 +70,15 @@
     <div class="info p-5" style="background-image: url('img/parchmentback.jpg')">
         <div class="row">
             <div class="col-4">
-                <button type="button" class="btn btn-info btn1"><span class="bullets">Best Activities</span></button>
+                <button type="button" class="btn btn-info btn1">Best Activities</button>
             </div>
             <div class="col-4">
-                <button type="button" class="btn btn-info btn2"><span class="bullets">Most Popular</span></button>
+                <button type="button" class="btn btn-info btn2">Most Popular</button>
 
 
             </div>
             <div class="col-4">
-                <button type="button" class="btn btn-info btn3"><span class="bullets">Fact & Info</span></button>
+                <button type="button" class="btn btn-info btn3">Fact & Info</button>
 
             </div>
             <div class="row">
