--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body, html {
 }
   
 .parallax { 
-  height: 100%; 
+  height: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@ body, html {
   opacity: 0;
 }
 
-.info {   
+.info {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,6 +49,10 @@ p {
 #countryHeader {
   text-align: center;
   background-color:#27849D;
+}
+
+.actImg {
+  width: 100%;
 }
 
 
