--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-<div class="cursor"></div>
-<div class="cursor-clone"></div>
+    <div class="cursor"></div>
+    <div class="cursor-clone"></div>
 
     <h1 id="countryHeader">{{result.0.dataValues.continent}}</h1>
 
@@ -59,7 +59,7 @@
 
     {{#each result}}
 
-    <div  id="{{country}}" class="parallax hidden" style="background-image: url('img/{{dataValues.country}}.jpg')">
+    <div id="{{country}}" class="parallax hidden" style="background-image: url('img/{{dataValues.country}}.jpg')">
 
         <div class="cityHeader">
             <h2 data-aos-anchor-placement="#{{country}}Anchor" data-aos="fade-up" data-aos-duration="2000"
@@ -69,28 +69,44 @@
 
     <div class="info p-5" style="background-image: url('img/parchmentback.jpg')">
         <div class="row">
-            <div class="col-4">
+            <div class="col-xs col-sm col-md col-lg">
+
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 m-1">
                 <button type="button" class="btn btn-info btn1">Best Activities</button>
             </div>
-            <div class="col-4">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 m-1">
                 <button type="button" class="btn btn-info btn2">Most Popular</button>
 
 
             </div>
-            <div class="col-4">
-                <button type="button" class="btn btn-info btn3">Fact & Info</button>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 m-1">
+                <button type="button" class="btn btn-info btn3">Facts & Info</button>
+
+            </div>
+            <div class="col-xs col-sm col-md col-lg">
 
             </div>
             <div class="row">
-                <div class="col-12 show1 pt-3">
-                    <p>Stuff about activities</p>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 show1 pt-3">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <h5><span class="bullets">{{activity_name}}</span></h5>
+                            <p>{{activity_description}}</p>
+                            <p>Visit here for more: <a href="{{activity_media_url}}"
+                                    target="_blank">{{activity_media_url}}</a></p>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: center">
+                            <img class="rounded actImg" src="imgs/activities/{{country}}/{{activity_name}}.jpg">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 show2 pt-3">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 show2 pt-3">
                     <p><span class="bullets">Foods: </span>{{foods}}</p>
                     <p><span class="bullets">Religions: </span>{{religions}}</p>
                     <p><span class="bullets">Time to visit: </span>{{bty}}</p>
                 </div>
-                <div class="col-12 show3 pt-3">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 show3 pt-3">
                     <p>{{fun_fact}}</p>
                     <p>{{brief_history}}</p>
                     <p>{{facts}}</p>
