--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ body, html {
 .parallax { 
   height: 100%;
   background-attachment: fixed;
-  background-position: center;
+  /* background-position: center; */
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
