--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,12 +30,16 @@
             <div class="col-lg-2 nav-options-col">
                 <div id="nav-options">
                     
+                    <span class="userSpan"></span>
+                        <a class="animTarget" id="user-profile" href="/profile">{{name}}</a>
+                    <span class="userSpan user"></span>
+
                     <span class="homeSpan"></span>
-                    <a class="animTarget" id="home-option" href="/">Home</a>
+                        <a class="animTarget" id="home-option" href="/">Home</a>
                     <span class="homeSpan aboutSpan"></span>
-                    <a class="animTarget" id="about-us" href="/aboutus">About</a>
+                        <a class="animTarget" id="about-us" href="/aboutus">About</a>
                     <span class="portSpan aboutSpan"></span>
-                    <a class="animTarget" id="portfolio" href="/portfolio">Portfolio</a>
+                        <a class="animTarget" id="portfolio" href="/portfolio">Portfolio</a>
                     <span class="portSpan"></span>
 
                 </div>
