finished password update on profile page but more importantly, I hope I fixed authentication error

--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -64,3 +64,7 @@ form input {
     background: rgb(97, 226, 121, 0.7)
     ;
 }
+
+#password-change, #email-confirm, #email-change {
+    display: none;
+}
