--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -35,6 +35,12 @@ body {
     padding: 20px;
 }
 
+#email-display-header, #first-joined-header,#email-display, #first-joined {
+    text-align: center;
+    color: white;
+    margin-bottom: 20px;
+}
+
 #settings-display form {
     text-align: center;
     margin: 10px;
@@ -65,6 +71,30 @@ form input {
     ;
 }
 
-#password-change, #email-confirm, #email-change {
+#password-confirm, #password-change, #email-confirm, #email-change {
     display: none;
+}
+
+#settings-modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 20vh;
+    width: 50vw;
+    background: lightcoral;
+    border-radius: 5px;
+    box-shadow: 10px 10px 10px rgb(0, 0, 0, 0.6);
+}
+
+#close-btn-wrapper {
+    margin: 5px 10px 0px 0px;
+    text-align: right;
+}
+
+#modal-msg {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
 }
