--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,10 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="css/profile/profile.css">
 <link rel="stylesheet" href="css/profile/cursor.css">
+<link rel="stylesheet" href="css/profile/nav.css">
 
 
 <title>{{name}}</title>
@@ -14,10 +16,32 @@
     <div class="cursor"></div>
     <div class="cursor-clone"></div>
 
+    <div class="toggle">
+        <span class="span"></span>
+        <span class="span"></span>
+        <span></span>
+    </div>
+
+    <div id="nav-options-col">
+
+        <div id="nav-modal">
+
+            <span class="homeSpan"></span>
+                <a id="home-option" href="/">Home</a>
+            <span class="homeSpan aboutSpan"></span>
+                <a id="about-option" href="/about">About</a>
+            <span class="portSpan aboutSpan"></span>
+                <a id="portfolio" href="/portfolio">Portfolio</a>
+            <span class="portSpan"></span>
+
+        </div>
+
+    </div>
+
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-2">
                 <div class="row">
                     <div class="col-lg-12 settings-options-top">
 
@@ -36,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-8 setting-display-col">
+            <div class="col-lg-8 col-md-10 col-sm-10 col-10 setting-display-col">
                 
                 <h1 id="welcome-user">{{name}}</h1>
                 
@@ -87,10 +111,11 @@
                 </div>
             </div>
 
-            <div class="col-lg-2"></div>
+            <div class="col-lg-2 col-md-0 col-sm-0 col-0"></div>
         </div>
     </div>
 
 <script src="js/cursor.js"></script>
 <script src="js/profiles/profileForms.js"></script>
+<script src="js/profiles/nav.js"></script>
 </body>
