--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,8 +3,8 @@
 <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="css/profile/profile.css">
-<link rel="stylesheet" href="css/profile/cursor.css">
-<link rel="stylesheet" href="css/profile/nav.css">
+<link rel="stylesheet" href="css/cursor.css">
+<link rel="stylesheet" href="css/nav.css">
 
 
 <title>{{name}}</title>
@@ -117,5 +117,5 @@
 
 <script src="js/cursor.js"></script>
 <script src="js/profiles/profileForms.js"></script>
-<script src="js/profiles/nav.js"></script>
+<script src="js/nav.js"></script>
 </body>
