--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,5 +1,5 @@
 .toggle {
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     top: 4.5%;
     left: 3.5%;
@@ -53,12 +53,12 @@
 }
 
 .toggle.active {
-    z-index: 2;
+    z-index: 3;
     transition: all 2s ease-in-out;
 }
 
 #nav-options-col {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     display: flex;
     align-items: center;
@@ -129,4 +129,33 @@
 #home-option:hover, #about-option:hover, #portfolio:hover {
     color: darkgray;
     text-decoration: none;
+}
+
+a:hover, button:hover, .btn:not(:disabled):not(:disabled), button:not(:disabled){
+    cursor: none;
+} 
+
+#admin-msg-modal {
+    z-index: 2;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 20vh;
+    width: 50vw;
+    background: lightcoral;
+    border-radius: 5px;
+    box-shadow: 10px 10px 10px rgb(0, 0, 0, 0.6);
+}
+
+#close-btn-wrapper {
+    margin: 5px 10px 0px 0px;
+    text-align: right;
+}
+
+#modal-msg {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
 }
