added about page

--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -31,7 +31,7 @@
                     
                     {{#if isSuperUser}}
                     <span class="adminSpan"></span>
-                        <a class="animTarget" id="admin-port" href="/admin">Admin Port</a>
+                        <a class="animTarget" id="adminPort" href="/admin">Admin Port</a>
                     <span class="adminSpan user"></span>
                     {{/if}}
 
@@ -42,7 +42,7 @@
                     <span class="homeSpan"></span>
                         <a class="animTarget" id="home-option" href="/">Home</a>
                     <span class="homeSpan aboutSpan"></span>
-                        <a class="animTarget" id="about-us" href="/aboutus">About</a>
+                        <a class="animTarget" id="about-us" href="/about">About</a>
                     <span class="portSpan aboutSpan"></span>
                         <a class="animTarget" id="portfolio" href="/portfolio">Portfolio</a>
                     <span class="portSpan"></span>
