--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -65,7 +65,7 @@
     top: 0%;
     left: -100%;
     height: 100vh;
-    width: 20vw;   
+    width: 25vw;   
     background: white;
 }
 
@@ -79,7 +79,7 @@
     font-size: 30px;
 }
 
-.homeSpan, .aboutSpan, .portSpan {
+.adminSpan, .userSpan, .homeSpan, .aboutSpan, .portSpan {
     display: block;
     height: 1px;
     width: 70%;
@@ -89,6 +89,18 @@
     animation: navAnim2 1s forwards;
 }
 
+.user {
+    margin-bottom: 80px;
+}
+
+.adminSpan.navTrigger {
+    animation: navAnim1 1s forwards;
+    transition-timing-function: ease-out;
+}
+.userSpan.navTrigger {
+    animation: navAnim1 1s forwards;
+    transition-timing-function: ease-out;
+}
 .homeSpan.navTrigger {
     animation: navAnim1 1s forwards;
     transition-timing-function: ease-out;
@@ -121,12 +133,12 @@
     }
 }
 
-#home-option, #home-option:visited, #about-option, #about-option:visited, #portfolio, #portfolio:visited {
+#adminPort, #adminPort:visited, #user-profile, #user-profile:visited, #home-option, #home-option:visited, #about-option, #about-option:visited, #portfolio, #portfolio:visited {
     font-size: 24px;
     color: black;
 }
 
-#home-option:hover, #about-option:hover, #portfolio:hover {
+#adminPort:hover, #user-profile:hover, #home-option:hover, #about-option:hover, #portfolio:hover {
     color: darkgray;
     text-decoration: none;
 }
