Fixed sign up issue

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -73,7 +73,7 @@
                 <div id="settings-modal">
 
                     <p id="close-btn-wrapper"><i class="close-btn fas fa-2x fa-times"></i></p>
-                    <h5 id="modal-msg">Your password has successfully been updated!</h5>
+                    <h5 id="modal-msg"></h5>
 
                 </div>
 
