--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -26,7 +26,7 @@
 
     <div class="container-fluid modal">
         <div class="row">
-            <div class="col-lg-2 nav-options-col">
+            <div class="col-lg-2 col-md-4 nav-options-col">
                 <div id="nav-options">
                     
                     {{#if isSuperUser}}
@@ -49,7 +49,7 @@
 
                 </div>
             </div>
-            <div id="nav-container" class="col-lg-10 colp">
+            <div id="nav-container" class="col-lg-10 col-md-8 colp">
                 <div id="navbar">
 
                 </div>
