--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,10 +27,10 @@
     </div>
   </div>
   <div id="mapHeader">
-    <h1>Roam</h1>
-    <h3>An exploration assistant for worldly travels.</h3>
+    <p class="headerMain">Roam</p>
+    <p class="subtitle">An exploration assistant for worldly travels.</p>
   </div>
-  <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo">
+  <object id="worldMapIndex" type="image/svg+xml" data="images/worldMap.svg" class="logo" style="max-width: 100%">
     The world!!!!
     <!-- fallback image in CSS -->
   </object>
