--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,3 +75,21 @@ p {
   width: 100%;
 }
 
+a:link {
+  color: #98C1D9 ;
+}
+
+/* A link that has been visited */
+a:visited {
+  color: #252443;
+}
+
+/* A link that is hovered on */
+a:hover {
+  color: #E0FBFC;
+}
+
+/* A link that is selected */
+a:active {
+  color: #8E9AAF;
+}
