--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -24,6 +24,11 @@
 
         <div id="nav-modal">
 
+
+            <span class="userSpan"></span>
+                <a class="animTarget" id="user-profile" href="/profile">{{name}}</a>
+            <span class="userSpan user"></span>
+
             <span class="homeSpan"></span>
                 <a id="home-option" href="/">Home</a>
             <span class="homeSpan aboutSpan"></span>
