--- a/views/countries.handlebars
+++ b/views/countries.handlebars
@@ -56,7 +56,7 @@
 
                 <div id="country-imgs-div">
                     {{#each result}}
-                    <a href="#{{country}}">
+                    <a class="country-img-scroll" href="#{{country}}">
                         <div class="country-imgs parallax" style="background-image: url('img/{{country}}.jpg')">
                             <h1 class="nav-img-headers">{{country}}</h1>
                         </div>
