--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -28,7 +28,7 @@
 
             {{#if isSuperUser}}
             <span class="adminSpan"></span>
-                <a class="animTarget" id="admin-port" href="/admin">Admin Port</a>
+                <a class="animTarget" id="adminPort" href="/admin">Admin Port</a>
             <span class="adminSpan user"></span>
             {{/if}}
 
