--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -41,6 +41,9 @@
                                     <input type="email" name="email" class="input-btn" id="signup-email" placeholder="johndoe@gmail.com">
 
                                 <label>Password:</label>
+                                <br>
+                                <label id="helper">password must contain more than 8 characters</label>
+                                <br>
                                     <input type="password" name="password" class="input-btn" id="signup-password" required>
                                 
                                 <input type="submit" value="Submit" class="input-btn" id="submit-btn">
