--- a/public/css/about/portfolio.css
+++ b/public/css/about/portfolio.css
@@ -45,10 +45,10 @@ body {
     border: 5px;
     width: 100%;
     padding: 25px;
+    text-align: center;
 }
 
 .portfolio h4, a {
     padding: 10px;
     margin-left: 10px;
-    border-left: 2px solid rgb(54, 54, 54);
 }
