fixed a couple bugs throughout page

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -60,7 +60,7 @@
                         world going through continents and each continent leading to it’s most popular countries for
                         travel. </p>
 
-                    <p>The application is not only mesmerizes with its beautiful visuals from all over the world but
+                    <p>The application not only mesmerizes with its beautiful visuals from all over the world but
                         also feeds a curious mind by providing an array of countries each presenting it’s uniqueness.
                         Every country displays what it offers & appeals to visitors. Roam is a great tool for explorers
                         and travelers to find a destination for their future travels adventures.</p>
