--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="css/admin/country-builder.css">
 <link rel="stylesheet" href="css/admin/country-editor.css">
 <link rel="stylesheet" href="css/cursor.css">
-<link rel="stylesheet" href="css/nav.css">
+<link rel="stylesheet" href="css/admin/nav.css">
 
 <title>Admin</title>
 
