--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,16 @@
 <link rel="stylesheet" href="css/login.css">
+<link rel="stylesheet" href="css/cursor.css">
+
 
 <title>Login</title>
 
 </head>
 
 <body>
+
+    <div class="cursor"></div>
+    <div class="cursor-clone"></div>
+
 
     <div class="container">
         <div class="row">
@@ -36,5 +42,6 @@
             <div class="col-lg-2"></div>
         </div>
     </div>
+    <script src="js/cursor.js"></script>
 
 </body>
